deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: status-monitor
  labels:
    app: status-monitor
