deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-monitor
  namespace: status-monitor
spec:
  selector:
    app: status-monitor
  ports:
    - port: 80
      targetPort: http
      name: http
  type: LoadBalancer
